--- a/desc.html
+++ b/desc.html
@@ -19,19 +19,23 @@
     
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3 col-3">
-                <img src="https://cdn.shopify.com/s/files/1/0533/2089/files/placeholder-images-image_large.png?format=webp&v=1530129081"
+            <div class="col-4 hide"></div>
+            <div class="col-md-3 col-4 ">
+                <img src="assets/img/andreww.jpg"
                     alt="Andrei Munteanu Headshot" id="headshot">
             </div>
-            <div class="col-md-6 col-6">
+            <div class="col-md-6 col-12">
+                <div id="center">
                 <h1 class="align-center">Andrei Munteanu</h1>
                 <p class="align-center">
                     Hi! I'm Andrei! Your <a
                         href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                         target="_blank">Microsoft</a> certified web developer. A mental health and personal growth advocate, part of <a href="https://magnifywellness.org/">Magnify Wellness</a>.
-                </p>
+                </p></div>
             </div>
-            <div class="col-md-3 col-6">
+            <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
+                <div class="col-3 hide"></div>
+                <div class="col-md-3 col-6 ">
                 <a href="https://github.com/Pcarioca" target="_blank"><i
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:amunteanu@magnifywellness.org"><i class="fas fa-at one-third big-icon"></i></a>
@@ -52,7 +56,7 @@
         </div>
         <div class="col" style="height:30px"></div>
         <div class="row">
-            <div class="col-md col">
+            <div class="col-md col centerr">
                  <i class="fab fa-microsoft"></i> Microsoft Certified Web developer, check my diploma using the code oFQC-uSH5 here: <a
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor, Tech and Ambassador Teams leader at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
