--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="index.css">
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
-
-    <title>Document</title>
+    <link rel="icon" href="assets/icon/heart.png">
+    <title>Your Web Developer</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     </div>
     <div class="container">
         <div class="row cent">
-            <div class="col-sm d-flex justify-content-center">
+            <div class="padd-0 col-xl d-flex justify-content-center">
                 <iframe src="desc.html" class="d-flex justify-content-center">
             </div>
         </div>
