target blank magnify

--- a/desc.html
+++ b/desc.html
@@ -30,7 +30,7 @@
                 <p class="align-center">
                     Hi! I'm Andrei! Your <a
                         href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                        target="_blank">Microsoft</a> certified web developer. A mental health and personal growth advocate, part of <a href="https://magnifywellness.org/">Magnify Wellness</a>.
+                        target="_blank">Microsoft</a> certified web developer. A mental health and personal growth advocate, part of <a href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
                 </p></div>
             </div>
             <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
