--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="web development, web developer, developer, website, development, microsoft, certified, mentor, magnify wellness, mental health, self development, growth">
+    <meta name="keywords" content="Andrei, Andrew, Andrei Munteanu, Andrew Munteanu, Munteanu Paul Andrei, Paul Andrei Munteanu, Paul Munteanu, Paul Andrei, Paul, web development, web developer, developer, website, development, microsoft, certified, mentor, magnify wellness, mental health, self development, growth">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="AIiE1In7ROZjqDJUxn0owdGpx9oQ1xNPnYqI-pOjpP4" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
