--- a/ro.html
+++ b/ro.html
@@ -16,12 +16,10 @@
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
-    
     <title>Your Web Developer</title>
 </head>
 
 <body>
-    
     <div class="area">
         <ul class="circles">
             <li></li>
@@ -36,11 +34,12 @@
             <li></li>
         </ul>
     </div>
-    <p id="langg"> <a id="active" href="index.html">EN</a> / <a href="ro.html" id="pasive">RO</a></p>
+    <p id="langg"> <a id="pasive" href="index.html">EN</a> / <a href="ro.html" id="active">RO</a></p>
+
     <div class="container">
         <div class="row cent">
             <div class="padd-0 col-xl d-flex justify-content-center">
-                <iframe src="desc.html" class="d-flex justify-content-center">
+                <iframe src="desc_ro.html" class="d-flex justify-content-center">
             </div>
         </div>
     </div>
