--- a/desc_ro.html
+++ b/desc_ro.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="global.css">
+
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="desc.css">
     
@@ -57,7 +62,7 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                 <i class="fab fa-microsoft"></i>Web Developer certificat de Microsoft, vezi diploma folosind codul oFQC-uSH5 la <a
+                 <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft, vezi diploma folosind codul oFQC-uSH5 la <a
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si liderul Web Developerilor la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG dedicat sănătății mentale <br>
                  <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/">Fake News Identifier</a> <br>
