--- a/ro.html
+++ b/ro.html
@@ -10,6 +10,10 @@
         content="Andrei, Andrew, Andrei Munteanu, Andrew Munteanu, Munteanu Paul Andrei, Paul Andrei Munteanu, web site business, web site creator, paid web developer, paid, program, Paul Munteanu, Paul Andrei, Paul, web development, microsoft certified web developer, certified web developer, web development, web development leader, web designer, designer, certified web designer, certified designer, psychology, Andrew Magnify, web developer, developer, website, development, microsoft, certified, mentor, magnify wellness, mental health, self development, growth, Your web developer, your certified web developer, your certified web designer, love">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="AIiE1In7ROZjqDJUxn0owdGpx9oQ1xNPnYqI-pOjpP4" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="switch.css">
