--- a/desc.html
+++ b/desc.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Paul Andrei Munteanu">
+    <meta name="description" content="Andrei Munteanu - Prezentare, Andrei Munteanu - Presentation">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -64,7 +66,7 @@
                  <i class="fab fa-microsoft"></i> Microsoft Certified Web developer, check my diploma using the code oFQC-uSH5 here: <a
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor, Tech and Ambassador Teams leader at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
-                 <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/">Fake News Identifier</a> <br>
+                 <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
                  <i class="fas fa-user-friends"></i> Don't hesitate to contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a>
             </div>
         </div></div>
