--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Paul Andrei Munteanu">
+    <meta name="description" content="Andrei Munteanu - Prezentare, Andrei Munteanu - Presentation">
     <meta name="keywords"
         content="Andrei, Andrew, Andrei Munteanu, pcarioca.github.io, designer services, services, Andrew Munteanu, Munteanu Paul Andrei, Paul Andrei Munteanu, web site business, web site creator, paid web developer, paid, program, Paul Munteanu, Paul Andrei, Paul, web development, microsoft certified web developer, certified web developer, web development, web development leader, web designer, designer, certified web designer, certified designer, psychology, Andrew Magnify, web developer, developer, website, development, microsoft, certified, mentor, magnify wellness, mental health, self development, growth, Your web developer, your certified web developer, your certified web designer, love">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
