save the children

--- a/desc.html
+++ b/desc.html
@@ -41,7 +41,7 @@
             </div>
             <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
                 <div class="col-3 hide"></div>
-                <div class="col-md-3 col-6 ">
+                <div class="col-md-3 col-6 padd">
                 <a href="https://github.com/Pcarioca" target="_blank"><i
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:amunteanu@magnifywellness.org"><i class="fas fa-at one-third big-icon"></i></a>
@@ -67,8 +67,10 @@
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor, Tech and Ambassador Teams leader at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
                  <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
-                 <i class="fas fa-user-friends"></i> Don't hesitate to contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a>
-            </div>
+                 <i class="fas fa-user-friends"></i> Volunteer at Save The Children Romania, Reșița <br>
+                 <i class="fas fa-child"></i> Don't hesitate to contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
+
+                </div>
         </div></div>
     
 </body>
