--- a/desc_ro.html
+++ b/desc_ro.html
@@ -43,12 +43,12 @@
             </div>
             <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
                 <div class="col-3 hide"></div>
-                <div class="col-md-3 col-6 ">
+                <div class="col-md-3 col-6 padd">
                 <a href="https://github.com/Pcarioca" target="_blank"><i
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:amunteanu@magnifywellness.org"><i class="fas fa-at one-third big-icon"></i></a>
                 <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank"><i
-                        class="fab fa-linkedin one-third big-icon"></i></a><br>
+                        class="fab fa-linkedin one-third big-icon"></i></a><br id="hide2">
                 <a href="https://www.facebook.com/andreiii.paul" target="_blank"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
                 <a href="https://www.instagram.com/andrewww_mnt/" target="_blank"><i
@@ -69,7 +69,8 @@
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si liderul Web Developerilor la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG dedicat sănătății mentale <br>
                  <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
-                 <i class="fas fa-user-friends"></i> Nu ezita să mă contactezi 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a>
+                 <i class="fas fa-user-friends"></i> Voluntar la "Salvați Copiii", Filiala Caraș-Severin <br>
+                 <i class="fas fa-user-friends"></i> Nu ezita să mă contactezi 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
             </div>
         </div></div>
     
