icons single row on phone

--- a/desc.html
+++ b/desc.html
@@ -40,13 +40,14 @@
                 </p></div>
             </div>
             <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
-                <div class="col-3 hide"></div>
-                <div class="col-md-3 col-6 padd">
+                <div class="col-3 hide2"></div>
+                <div class="col-md-3 col padd">
                 <a href="https://github.com/Pcarioca" target="_blank"><i
                         class="fab fa-github one-third big-icon"></i></a>
                 <a href="mailto:amunteanu@magnifywellness.org"><i class="fas fa-at one-third big-icon"></i></a>
                 <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank"><i
-                        class="fab fa-linkedin one-third big-icon"></i></a><br>
+                        class="fab fa-linkedin one-third big-icon"></i></a> 
+                        <!-- <span id="hide2"><br></span> -->
                 <a href="https://www.facebook.com/andreiii.paul" target="_blank"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
                 <a href="https://www.instagram.com/andrewww_mnt/" target="_blank"><i
@@ -67,8 +68,9 @@
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor, Tech and Ambassador Teams leader at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
                  <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
-                 <i class="fas fa-user-friends"></i> Volunteer at Save The Children Romania, Reșița <br>
-                 <i class="fas fa-child"></i> Don't hesitate to contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
+                 <!-- If you're reading this then you're really cool, hit me up on instagram:) -->
+                 <i class="fas fa-child"></i> Volunteer at <a href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The Children</a> Romania, Reșița <br>
+                 <i class="fas fa-user-friends"></i> Don't hesitate to contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
 
                 </div>
         </div></div>
