--- a/desc.html
+++ b/desc.html
@@ -34,9 +34,9 @@
                 <div id="center">
                 <h1 class="align-center">Andrei Munteanu</h1>
                 <p class="align-center">
-                    Hi! I'm Andrei! Your <a
+                    Hi! I'm Andrei! Your Microsoft<a
                         href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                        target="_blank">Microsoft</a> certified web developer. A mental health and personal growth advocate, part of <a href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
+                        target="_blank"> certified</a> web developer. A mental health and personal growth advocate, part of <a href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
                 </p></div>
             </div>
             <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
@@ -66,11 +66,11 @@
             <div class="col-md col centerr">
                  <i class="fab fa-microsoft"></i> Microsoft Certified Web developer, check my diploma using the code oFQC-uSH5 here: <a
                         href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
-                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor, Tech and Ambassador Teams leader at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
+                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
                  <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
                  <!-- If you're reading this then you're really cool, hit me up on instagram:) -->
                  <i class="fas fa-child"></i> Volunteer at <a href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The Children</a> Romania, Reșița <br>
-                 <i class="fas fa-user-friends"></i> Don't hesitate to contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
+                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
 
                 </div>
         </div></div>
