--- a/desc_ro.html
+++ b/desc_ro.html
@@ -70,14 +70,13 @@
             <div class="col-md col centerr">
                 <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft, vezi diploma folosind codul
                 oFQC-uSH5 la <a href="https://verify.certiport.com" target="_blank">verify.certiport.com</a> <br>
-                <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si liderul Web
-                Developerilor la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
+                <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si Directorul Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
                 dedicat sănătății mentale <br>
                 <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/"
                     target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/"
                     target="_blank">Fake News Identifier</a> <br>
                 <i class="fas fa-child"></i> Voluntar la <a href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați Copiii</a>, Filiala Caraș-Severin <br>
-                <i class="fas fa-user-friends"></i> Nu ezita să mă contactezi 😄 : <a
+                <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
                     href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
             </div>
         </div>
