--- a/desc.html
+++ b/desc.html
@@ -30,7 +30,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-4 hide"></div>
-            <div class="col-md-3 col-4 ">
+            <div class="col-md-3 col-4 " id="flex">
                 <img src="assets/img/andreww.jpg"
                     alt="Andrei Munteanu Headshot" id="headshot">
             </div>
@@ -48,15 +48,15 @@
                 <div class="col-md-3 col padd">
                 <a href="https://github.com/Pcarioca" target="_blank" id="github"><i
                         class="fab fa-github one-third big-icon"></i></a>
-                <a href="mailto:amunteanu@magnifywellness.org"><i class="fas fa-at one-third big-icon"></i></a>
-                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank"><i
+                <a href="mailto:amunteanu@magnifywellness.org" id="mail"><i class="fas fa-at one-third big-icon"></i></a>
+                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a> 
                         <!-- <span id="hide2"><br></span> -->
-                <a href="https://www.facebook.com/andreiii.paul" target="_blank"><i
+                <a href="https://www.facebook.com/andreiii.paul" target="_blank" id="facebook"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
-                <a href="https://www.instagram.com/andrewww_mnt/" target="_blank"><i
+                <a href="https://www.instagram.com/andrewww_mnt/" target="_blank" id="instagram"><i
                         class="fab fa-instagram one-third big-icon"></i></a>
-                <a href="https://www.worldcubeassociation.org/persons/2019ANDR06" target="_blank"><i
+                <a href="https://www.worldcubeassociation.org/persons/2019ANDR06" target="_blank" id="wca"><i
                         class="fas fa-cube one-third big-icon"></i></a>
 
 
@@ -71,7 +71,7 @@
                  <i class="fab fa-microsoft"></i> Microsoft Certified Web developer, check my diploma using the code oFQC-uSH5 here: <a
                         href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q==" target="_blank">verify.certiport.com</a> <br>
                  <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO dedicated to Mental Health <br>
-                 <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
+                 <i class="fas fa-globe-europe"></i> Check out some of my projects: <a href="https://pcarioca.github.io/Mentally-Healthy/index.html" target="_blank">Mentally Healthy</a>, <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a> <br>
                  <!-- If you're reading this then you're really cool, hit me up on instagram:) -->
                  <i class="fas fa-child"></i> Volunteer at <a href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The Children</a> Romania, Reșița <br>
                  <i class="fas fa-user-friends"></i> You can contact me 😄 : <a href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
