--- a/desc_ro.html
+++ b/desc_ro.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="desc.css">
 
     <script src="https://kit.fontawesome.com/e85267642f.js" crossorigin="anonymous"></script>
-
+    <script src="jquery/jquery-3.6.0.js"></script>
+    <script src="jquery/index.js"></script>
 
 
     <title>Document</title>
@@ -29,7 +30,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-4 hide"></div>
-            <div class="col-md-3 col-4 ">
+            <div class="col-md-3 col-4 " id="flex">
                 <img src="assets/img/andreww.jpg" alt="Andrei Munteanu Headshot" id="headshot">
             </div>
             <div class="col-md-6 col-12">
@@ -46,17 +47,17 @@
             <!-- <div class="col-sm-3 col-lg-4 g-4"> -->
                 <div class="col-3 hide2"></div>
                 <div class="col-md-3 col padd">
-                <a href="https://github.com/Pcarioca" target="_blank"><i
+                <a href="https://github.com/Pcarioca" target="_blank" id="github"><i
                         class="fab fa-github one-third big-icon"></i></a>
-                <a href="mailto:amunteanu@magnifywellness.org"><i class="fas fa-at one-third big-icon"></i></a>
-                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank"><i
+                <a href="mailto:amunteanu@magnifywellness.org" id="mail"><i class="fas fa-at one-third big-icon"></i></a>
+                <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a> 
                         <!-- <span id="hide2"><br></span> -->
-                <a href="https://www.facebook.com/andreiii.paul" target="_blank"><i
+                <a href="https://www.facebook.com/andreiii.paul" target="_blank" id="facebook"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
-                <a href="https://www.instagram.com/andrewww_mnt/" target="_blank"><i
+                <a href="https://www.instagram.com/andrewww_mnt/" target="_blank" id="instagram"><i
                         class="fab fa-instagram one-third big-icon"></i></a>
-                <a href="https://www.worldcubeassociation.org/persons/2019ANDR06" target="_blank"><i
+                <a href="https://www.worldcubeassociation.org/persons/2019ANDR06" target="_blank" id="wca"><i
                         class="fas fa-cube one-third big-icon"></i></a>
 
 
