--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
-    
+    <script src="jquery/jquery-3.6.0.js"></script>
+    <script src="jquery/index.js"></script>
     <title>Your Web Developer</title>
 </head>
 
 <body>
-    audio/a3.mp3
+    
     <div class="area">
         <ul class="circles">
             <li></li>
