--- a/desc_ro.html
+++ b/desc_ro.html
@@ -77,6 +77,8 @@
                     target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/"
                     target="_blank">Fake News Identifier</a> <br>
                 <i class="fas fa-child"></i> Voluntar la <a href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați Copiii</a>, Filiala Caraș-Severin <br>
+                <i class="fas fa-chalkboard-teacher"></i> Instructor <a
+                    href="https://www.facebook.com/logiscool.resita" target="_blank">Logiscool Resita</a> <br>
                 <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
                     href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
             </div>
