--- a/your_developer.html
+++ b/your_developer.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="loading.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="switch.css">
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
@@ -43,31 +43,15 @@
             <li></li>
         </ul>
     </div>
-    
-    <div class="container-fluid">
+    <p id="langg"> <a id="active" href="your_developer.html">EN</a> | <a href="developer-ul_tau.html" id="pasive">RO</a></p>
+    <div class="container">
         <div class="row cent">
-            <div class="col-xl padd-0 d-flex justify-content-center" id="blur">
-                <div class="center">
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                  </div>
-                <!-- <img src="assets/img/loading.gif" alt="loading" id="load"> -->
+            <div class="padd-0 col-xl d-flex justify-content-center" id="blur">
+                <iframe src="desc.html" allowtransparency="true" class="d-flex justify-content-center" id="li1">
             </div>
         </div>
     </div>
-<script>
-        setTimeout(function(){
-            window.location.href = "/your_developer.html";
-        }, 3000)
-    </script>
+
 
 
 
