--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -43,12 +43,12 @@
             <li></li>
         </ul>
     </div>
-    <p id="langg"> <a id="pasive" href="index.html">EN</a> / <a href="ro.html" id="active">RO</a></p>
+    <p id="langg"> <a id="pasive" href="your_developer.html">EN</a> | <a href="your_developer.html" id="active">RO</a></p>
 
     <div class="container">
         <div class="row cent">
             <div class="padd-0 col-xl d-flex justify-content-center">
-                <iframe src="desc_ro.html" class="d-flex justify-content-center">
+                <iframe src="desc_ro.html" allowtransparency="true" class="d-flex justify-content-center">
             </div>
         </div>
     </div>
