--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
     
-    <div class="area">
+    <!-- <div class="area">
         <ul class="circles">
             <li></li>
             <li></li>
@@ -42,7 +42,7 @@
             <li></li>
             <li></li>
         </ul>
-    </div>
+    </div> -->
     
     <div class="container-fluid">
         <div class="row cent">
