ro-vs-info desc_ro.css

--- a/desc_ro.html
+++ b/desc_ro.html
@@ -75,7 +75,7 @@
                 dedicat sănătății mentale <br>
                 <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/"
                     target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/"
-                    target="_blank">Fake News Identifier</a> <br>
+                    target="_blank">Fake News Identifier</a>, <a href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a> <br>
                 <i class="fas fa-child"></i> Voluntar la <a href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați Copiii</a>, Filiala Caraș-Severin <br>
                 <i class="fas fa-chalkboard-teacher"></i> Instructor <a
                     href="https://www.facebook.com/logiscool.resita" target="_blank">Logiscool Resita</a> <br>
