--- a/desc.html
+++ b/desc.html
@@ -70,8 +70,7 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Microsoft Certified Web developer, check my diploma using the code
-                oFQC-uSH5 here: <a
+                <i class="fab fa-microsoft"></i> Microsoft Certified Web developer: <a
                     href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of
