--- a/desc_ro.html
+++ b/desc_ro.html
@@ -69,8 +69,7 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft, vezi diploma folosind codul
-                oFQC-uSH5 la <a href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q==" target="_blank">verify.certiport.com</a> <br>
+                <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft: <a href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q==" target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si Directorul Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
                 dedicat sănătății mentale <br>
                 <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/"
