--- a/developer-ul_tau.html
+++ b/developer-ul_tau.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="AIiE1In7ROZjqDJUxn0owdGpx9oQ1xNPnYqI-pOjpP4" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
@@ -22,10 +22,10 @@
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
-    
+
     <title>Your Web Developer</title>
 
-    
+
 </head>
 
 <body>
@@ -43,7 +43,8 @@
             <li></li>
         </ul>
     </div>
-    <p id="langg"> <a id="pasive" href="your_developer.html">EN</a> | <a href="your_developer.html" id="active">RO</a></p>
+    <p id="langg"> <a id="pasive" href="your_developer.html">EN</a> | <a href="your_developer.html" id="active">RO</a>
+    </p>
 
     <div class="container">
         <div class="row cent">
