--- a/desc.html
+++ b/desc.html
@@ -54,17 +54,12 @@
                 <a href="https://www.linkedin.com/in/paul-andrei-munteanu-53a02b1b6/" target="_blank" id="linkedin"><i
                         class="fab fa-linkedin one-third big-icon"></i></a>
                 <!-- <span id="hide2"><br></span> -->
-                <a href="https://www.facebook.com/andreiii.paul" target="_blank" id="facebook"><i
+                <a href="https://www.facebook.com/andrei.munteanu.04" target="_blank" id="facebook"><i
                         class="fab fa-facebook one-third big-icon"></i></a>
                 <a href="https://www.instagram.com/andrewww_mnt/" target="_blank" id="instagram"><i
                         class="fab fa-instagram one-third big-icon"></i></a>
                 <a href="https://www.worldcubeassociation.org/persons/2019ANDR06" target="_blank" id="wca"><i
                         class="fas fa-cube one-third big-icon"></i></a>
-
-
-
-
-
             </div>
         </div>
         <div class="col" style="height:30px"></div>
