--- a/your_developer.html
+++ b/your_developer.html
@@ -43,7 +43,7 @@
             <li></li>
         </ul>
     </div>
-    <p id="langg"> <a id="active" href="your_developer.html">EN</a> | <a href="developer-ul_tau.html" id="pasive">RO</a></p>
+    <p id="langg"> <a class="active" href="your_developer.html">EN</a> | <a href="developer-ul_tau.html" class="pasive">RO</a> | <a href="Ihr_Webentwickler.html" class="pasive">DE</a></p>
     <div class="container">
         <div class="row cent">
             <div class="padd-0 col-xl d-flex justify-content-center" id="blur">
