--- a/Ihr_Webentwickler.html
+++ b/Ihr_Webentwickler.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="AIiE1In7ROZjqDJUxn0owdGpx9oQ1xNPnYqI-pOjpP4" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
@@ -22,13 +22,13 @@
     <!-- <link rel="stylesheet" href="desc.css">  -->
     <link rel="stylesheet" href="background/back.css">
     <link rel="icon" href="assets/icon/heart.png">
-
-    <title>Web developer-ul tau</title>
-
-
+    <script src="jquery/jquery-3.6.0.js"></script>
+    <script src="jquery/index.js"></script>
+    <title>Ihr Webentwickler</title>
 </head>
 
 <body>
+    
     <div class="area">
         <ul class="circles">
             <li></li>
@@ -43,16 +43,15 @@
             <li></li>
         </ul>
     </div>
-    <p id="langg"> <a class="pasive" href="your_developer.html">EN</a> | <a href="your_developer.html" class="active">RO</a> | <a href="Ihr_Webentwickler.html" class="pasive">DE</a>
-    </p>
-
+    <p id="langg"> <a class="pasive" href="your_developer.html">EN</a> | <a href="developer-ul_tau.html" class="pasive">RO</a> | <a href="Ihr_Webentwickler.html" class="active">DE</a></p>
     <div class="container">
         <div class="row cent">
-            <div class="padd-0 col-xl d-flex justify-content-center">
-                <iframe src="desc_ro.html" allowtransparency="true" class="d-flex justify-content-center">
+            <div class="padd-0 col-xl d-flex justify-content-center" id="blur">
+                <iframe src="desc_de.html" allowtransparency="true" class="d-flex justify-content-center" id="li1">
             </div>
         </div>
     </div>
+
 
 
 
