--- a/desc_de.html
+++ b/desc_de.html
@@ -37,10 +37,11 @@
                 <div id="center">
                     <h1 class="align-center">Andrei Munteanu</h1>
                     <p class="align-center">
-                        Salut. Sunt Andrei! Web developer-ul tău certificat de <a
+                        Hi! Ich bin Andrei Munteanu, ihr <a
                             href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                            target="_blank">Microsoft</a>. Un activist al sănătății mentale, parte din <a
-                            href="https://magnifywellness.org/" target="_blank">Magnify Wellness</a>.
+                            target="_blank">Microsoft zertifizierter</a> Webenwickler. Ein Anwalt für psychische
+                        Gesundheit, Teil von <a href="https://magnifywellness.org/" target="_blank">Magnify
+                            Wellness</a>.
                     </p>
                 </div>
             </div>
@@ -65,22 +66,22 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Web Developer certificat de Microsoft: <a
+                <i class="fab fa-microsoft"></i> Microsoft zertifiyierter Webentwickler: <a
                     href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">verify.certiport.com</a> <br>
-                <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor si Directorul
-                Technologiei la <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, un ONG
-                dedicat sănătății mentale <br>
-                <i class="fas fa-globe-europe"></i> Câteva dintre proiectele mele: <a href="https://romana-vs-info.ro/"
-                    target="_blank">romana-vs-info.ro</a>, <a href="https://codeweekeuhack.netlify.app/"
-                    target="_blank">Fake News Identifier</a>, <a href="https://romana-vs-info.ro/"
-                    target="_blank">romana-vs-info.ro</a> <br>
-                <i class="fas fa-child"></i> Voluntar la <a
+                <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor und Webdesigner bei <a
+                    href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>
+                eine gemeinnützige Organisation die psychischen Gesundheit gewidmet <br>
+                <i class="fas fa-globe-europe"></i> Sehen Sie ein paar meiner Projekte: <a
+                    href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a
+                    href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a>, <a
+                    href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a> <br>
+                <i class="fas fa-child"></i> Ehrenamtlich bei <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
-                <i class="fas fa-chalkboard-teacher"></i> Instructor <a href="https://www.facebook.com/logiscool.resita"
+                <i class="fas fa-chalkboard-teacher"></i> Lehrer bei <a href="https://www.facebook.com/logiscool.resita"
                     target="_blank">Logiscool Resita</a> <br>
-                <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
+                <i class="fas fa-user-friends"></i> Kontaktieren Sie mich 😄 : <a
                     href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
             </div>
         </div>
