--- a/desc_de.html
+++ b/desc_de.html
@@ -40,7 +40,7 @@
                         Hi! Ich bin Andrei Munteanu, ihr <a
                             href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                             target="_blank">Microsoft zertifizierter</a> Webenwickler. Ein Anwalt für psychische
-                        Gesundheit, Teil von <a href="https://magnifywellness.org/" target="_blank">Magnify
+                        Gesundheit, Trainer am <a href="https://magnifywellness.org/" target="_blank">Magnify
                             Wellness</a>.
                     </p>
                 </div>
