--- a/desc_de.html
+++ b/desc_de.html
@@ -71,7 +71,7 @@
                     target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor und Webdesigner bei <a
                     href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>
-                eine gemeinnützige Organisation die sich psychischen Gesundheit gewidmet. <br>
+                eine gemeinnützige Organisation dem sich psychischen Gesundheit gewidmet. <br>
                 <i class="fas fa-globe-europe"></i> Sehen Sie ein paar meiner Projekte: <a
                     href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a
                     href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a>, <a
