--- a/desc.html
+++ b/desc.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-4 hide"></div>
             <div class="col-md-3 col-4 " id="flex">
-                <img src="assets/img/andrei.jpg" alt="Andrei Munteanu Headshot" id="headshot">
+                <img src="assets/img/andreww.jpg" alt="Andrei Munteanu Headshot" id="headshot">
             </div>
             <div class="col-md-6 col-12">
                 <div id="center">
