--- a/desc_de.html
+++ b/desc_de.html
@@ -66,12 +66,12 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Microsoft zertifiyierter Webentwickler: <a
+                <i class="fab fa-microsoft"></i> Microsoft zertifizierter Webentwickler: <a
                     href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
                     target="_blank">verify.certiport.com</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor und Webdesigner bei <a
-                    href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>
-                eine gemeinnützige Organisation die sich psychischen Gesundheit gewidmet. <br>
+                    href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>,
+                eine gemeinnützige Organisation, die sich psychischen Gesundheit gewidmet. <br>
                 <i class="fas fa-globe-europe"></i> Sehen Sie ein paar meiner Projekte: <a
                     href="https://romana-vs-info.ro/" target="_blank">romana-vs-info.ro</a>, <a
                     href="https://codeweekeuhack.netlify.app/" target="_blank">Fake News Identifier</a>, <a
