--- a/desc.html
+++ b/desc.html
@@ -65,11 +65,11 @@
         <div class="col" style="height:30px"></div>
         <div class="row">
             <div class="col-md col centerr">
-                <i class="fab fa-microsoft"></i> Microsoft Certified Web developer: <a
+                <i class="fab fa-microsoft"></i> <a
                     href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                    target="_blank">verify.certiport.com</a> <br>
+                    target="_blank">C1-level English user.</a> <br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of
-                Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO
+                Technology at <a href="https://magnifywellness.org/" target="_blank"> B1-</a>, an NPO
                 dedicated to Mental Health <br>
                 <i class="fas fa-globe-europe"></i> Check out some of my projects: <a
                     href="https://pcarioca.github.io/Mentally-Healthy/index.html" target="_blank">Mentally Healthy</a>,
