--- a/desc.html
+++ b/desc.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-4 hide"></div>
             <div class="col-md-3 col-4 " id="flex">
-                <img src="assets/img/andrei.jpg" alt="Andrei Munteanu Headshot" id="headshot">
+                <img src="assets/img/patrat.jpg" alt="Andrei Munteanu Headshot" id="headshot">
             </div>
             <div class="col-md-6 col-12">
                 <div id="center">
@@ -67,9 +67,9 @@
             <div class="col-md col centerr">
                 <i class="fab fa-microsoft"></i> <a
                     href="https://portal.certiport.com/Portal/Pages/PrintTranscriptInfo.aspx?action=Cert&id=397&cvid=oeEaa6xxoYlTMMqYKNVh/Q=="
-                    target="_blank">C1-level English user.</a> <br>
+                    target="_blank">Microsoft certified</a> web developer<br>
                 <img src="assets/img/logo_remove_bg (1).png" alt="magnify logo" id="mag"> Mentor and Director of
-                Technology at <a href="https://magnifywellness.org/" target="_blank"> B1-</a>, an NPO
+                Technology at <a href="https://magnifywellness.org/" target="_blank"> Magnify Wellness</a>, an NPO
                 dedicated to Mental Health <br>
                 <i class="fas fa-globe-europe"></i> Check out some of my projects: <a
                     href="https://pcarioca.github.io/Mentally-Healthy/index.html" target="_blank">Mentally Healthy</a>,
@@ -79,8 +79,8 @@
                 <i class="fas fa-child"></i> Volunteer at <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The
                     Children</a> Romania, Reșița <br>
-                <i class="fas fa-chalkboard-teacher"></i> Trainer at <a
-                    href="https://www.facebook.com/logiscool.resita" target="_blank">Logiscool Resita</a> <br>
+                <i class="fas fa-chalkboard-teacher"></i> See my full CV <a
+                    href="https://drive.google.com/file/d/1_wNg5RbDDUTEMuA-BjM1MtcsTnKAI74i/view?usp=share_link" target="_blank">here</a> <br>
                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a
                     href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
 
