--- a/switch.html
+++ b/switch.html
@@ -16,7 +16,7 @@
             color:white;
         }
         #active{
-            background-color: rgba(221, 0, 0, 0.685);
+            background-color: #013c7d;
             padding:2px 5px;
             border-radius: 10%;
             cursor:pointer;
