--- a/desc.html
+++ b/desc.html
@@ -79,7 +79,7 @@
                 <i class="fas fa-child"></i> Volunteer at <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Save The
                     Children</a> Romania, Reșița <br>
-                <i class="fas fa-chalkboard-teacher"></i> See my full CV <a
+                    <i class="fa-solid fa-file"></i> See my full CV <a
                     href="https://drive.google.com/file/d/1_wNg5RbDDUTEMuA-BjM1MtcsTnKAI74i/view?usp=share_link" target="_blank">here</a> <br>
                 <i class="fas fa-user-friends"></i> You can contact me 😄 : <a
                     href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br> <br>
