--- a/desc_de.html
+++ b/desc_de.html
@@ -79,7 +79,7 @@
                 <i class="fas fa-child"></i> Ehrenamtlich bei <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
-                    <i class="fas fa-chalkboard-teacher"></i> Sehen Sie <a
+                    <i class="fa-solid fa-file"></i> Sehen Sie <a
                     href="https://drive.google.com/file/d/1_wNg5RbDDUTEMuA-BjM1MtcsTnKAI74i/view?usp=share_link" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
                 
                 <i class="fas fa-user-friends"></i> Kontaktieren Sie mich 😄 : <a
