--- a/desc_ro.html
+++ b/desc_ro.html
@@ -78,7 +78,7 @@
                 <i class="fas fa-child"></i> Voluntar la <a
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
-                    <i class="fas fa-chalkboard-teacher"></i> Vede-ți-mi CV-ul <a
+                    <i class="fa-solid fa-file"></i> Vede-ți-mi CV-ul <a
                     href="https://drive.google.com/file/d/1_wNg5RbDDUTEMuA-BjM1MtcsTnKAI74i/view?usp=share_link" target="_blank">aici</a> <br>
                 
                 <i class="fas fa-user-friends"></i> Poți să mă contactezi 😄 : <a
