--- a/desc_de.html
+++ b/desc_de.html
@@ -80,7 +80,7 @@
                     href="https://www.facebook.com/Salvați-Copiii-Filiala-Caraș-Severin-127432630771738"> Salvați
                     Copiii</a>, Filiala Caraș-Severin <br>
                     <i class="fa-solid fa-file"></i> Sehen Sie <a
-                    href="https://drive.google.com/file/d/1_wNg5RbDDUTEMuA-BjM1MtcsTnKAI74i/view?usp=share_link" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
+                    href="https://drive.google.com/file/d/1TlkAmF-xLOIGDo1KFOM2fFqeLv_6tOop/view?usp=sharing" target="_blank">hier</a> meinen gesamten Lebenslauf <br>
                 
                 <i class="fas fa-user-friends"></i> Kontaktieren Sie mich 😄 : <a
                     href="mailto:amunteanu@magnifywellness.org">amunteanu@magnifywellness.org</a> <br><br>
